--- a/progress-block/src/index.html
+++ b/progress-block/src/index.html
@@ -21,13 +21,13 @@
 					<button class="toggle-btn" id="startButton">
 						<div class="toggle-btn__icon"></div>
 					</button>
-					<p>Animate</p>
+					<label>Animate</label>
 				</div>
         <div class="input-wrapper">
 					<button class="toggle-btn" id="hideButton">
 						<div class="toggle-btn__icon"></div>
 					</button>
-					<p>Hide</p>
+					<label>Hide</label>
 				</div>
       </div>
     </div>
